dpkg (1.3.8) unstable; urgency=low (high for new source format)
  * dpkg-buildpackage -sa, -si options work correctly.

  * update-rc.d(8) updated to reflect design and reality.
  * Programmers' and policy manual updates.

 -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Fri, 23 Aug 1996 12:48:26 +0100

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+dpkg (1.3.8) unstable; urgency=low (high for new source format)
+
+  * dpkg-buildpackage -sa, -si options work correctly.
+
+  * update-rc.d(8) updated to reflect design and reality.
+  * Programmers' and policy manual updates.
+
+ -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Fri, 23 Aug 1996 12:48:26 +0100
+
 dpkg (1.3.7) unstable; urgency=low (medium for source pkg docs)
 
   * dselect +/-/_/= on lines for all broken, new, local or whatever
