dpkg (1.3.9) unstable; urgency=low (high for new source format)
  * dpkg --get-selections and --set-selections added.
  * New dpkg --force-not-root flag.

  * Don't replace directory with another package's file.  (Bug#4202.)

  * All manpages now installed compressed.
  * Copyright file moved to /usr/doc/dpkg/copyright.
  * Standards-Version updated (0.2.1.1).

 -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Sat, 24 Aug 1996 19:09:30 +0100

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+dpkg (1.3.9) unstable; urgency=low (high for new source format)
+
+  * dpkg --get-selections and --set-selections added.
+  * New dpkg --force-not-root flag.
+
+  * Don't replace directory with another package's file.  (Bug#4202.)
+
+  * All manpages now installed compressed.
+  * Copyright file moved to /usr/doc/dpkg/copyright.
+  * Standards-Version updated (0.2.1.1).
+
+ -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Sat, 24 Aug 1996 19:09:30 +0100
+
 dpkg (1.3.8) unstable; urgency=low (high for new source format)
 
   * dpkg-buildpackage -sa, -si options work correctly.
