--- a/doc/changelog
+++ b/doc/changelog
@@ -1,3 +1,9 @@
+debian-manuals (0.2.1.1) unstable;
+
+  * Can't overwrite directories in one package with files in another.
+
+ -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Sat, 24 Aug 1996 18:44:54 +0100
+
 debian-manuals (0.2.1.0) unstable;
 
   * Policy says when and how to include original source in upload.
