dpkg (1.3.12) unstable; urgency=medium
  * dpkg prints old version number when upgrading.
  * dpkg-deb tries to detect and flag corruption by ASCII download.

  * dpkg-genchanges and dpkg-buildpackage say what source is included.

  * dpkg-buildpackage passes +clearsig=on to PGP (or pgpcommand).

  * dpkg-source prints better error for cpio not honouring -0t.
  * control file Suggests cpio >= 2.4.2, rather than just cpio.

 -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Fri, 30 Aug 1996 15:31:51 +0100

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+dpkg (1.3.12) unstable; urgency=medium
+
+  * dpkg prints old version number when upgrading.
+  * dpkg-deb tries to detect and flag corruption by ASCII download.
+
+  * dpkg-genchanges and dpkg-buildpackage say what source is included.
+
+  * dpkg-buildpackage passes +clearsig=on to PGP (or pgpcommand).
+
+  * dpkg-source prints better error for cpio not honouring -0t.
+  * control file Suggests cpio >= 2.4.2, rather than just cpio.
+
+ -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Fri, 30 Aug 1996 15:31:51 +0100
+
 dpkg (1.3.11) unstable; urgency=low
 
   * EBUSY when dpkg removes a directory is only a warning.
