--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,27 @@
+dpkg (1.3.13) unstable; urgency=low (HIGH for building new src X programs)
+
+  * X shared libraries added to shlibs.default (=> `elf-x11r6lib').
+  * dpkg-source tar invocation fixed so that TAPE env var doesn't break it.
+  * dpkg-source copes better with missing final newline messages from diff.
+
+  * dpkg-buildpackage usage message fixed: -si is the default.  (Bug#4350.)
+  * dpkg-source error message about src dir mismatch typo fixed.  (Bug#4349.)
+
+  * dpkg-source(1) has suggestions for dpkg-buildpackage -r option.
+  * dpkg-source change date fixed.  (Bug#4351.)
+  * More developers' keys.
+  * Manual updates, own Standards-Version updated.
+
+ -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Sat, 31 Aug 1996 20:08:18 +0100
+
 dpkg (1.3.12) unstable; urgency=medium
 
-  * dpkg prints old version number when upgrading.
+  * dpkg prints old version number when upgrading.  (Bug#4340.)
   * dpkg-deb tries to detect and flag corruption by ASCII download.
 
   * dpkg-genchanges and dpkg-buildpackage say what source is included.
 
-  * dpkg-buildpackage passes +clearsig=on to PGP (or pgpcommand).
+  * dpkg-buildpackage passes +clearsig=on to PGP (or pgpcommand).  (Bug#4342.)
 
   * dpkg-source prints better error for cpio not honouring -0t.
   * control file Suggests cpio >= 2.4.2, rather than just cpio.
