--- a/scripts/dpkg-source.1
+++ b/scripts/dpkg-source.1
@@ -1,6 +1,6 @@
 .\" Hey, Emacs!  This is an -*- nroff -*- source file.
 .\" Authors: Ian Jackson
-.TH DPKG\-SOURCE 1 "7th Auguest" "Debian Project" "Debian GNU/Linux manual"
+.TH DPKG\-SOURCE 1 "7th August" "Debian Project" "Debian GNU/Linux manual"
 .SH NAME 
 dpkg\-source, dpkg\-gencontrol, dpkg\-shlibdeps, dpkg\-genchanges,
 dpkg\-buildpackage, dpkg\-distaddfile, dpkg\-parsechangelog
@@ -499,6 +499,16 @@ and will get as arguments the name of the real command to run and the
 arguments it should take.
 .I gain-root-command
 should not contain spaces or any other shell metacharacters.
+.I gain-root-command
+might typically be
+.BR sudo ", " super " or " really .
+.B su
+is not suitable, since it requires a
+.B -c
+option to run a command and even then it can only invoke the user's
+shell with
+.B -c
+instead of passing arguments individually to the command to be run.
 .TP
 .BI -p pgp-command
 When
@@ -678,6 +688,10 @@ file will be passed through variable substitution twice.  This should
 not matter, since
 .BR $ ", " { " and " }
 are not legal in package names or version numbers.
+
+It should be possible to specify spaces and shell metacharacters in
+and initial arguments for
+.IR gain-root-command " and " pgp-command .
 .SH SEE ALSO
 .IR "dpkg programmers' manual" ,
 .br
