dpkg (1.3.14) unstable; urgency=low
  * dpkg-buildpackage new -tc (clean source tree) option.

  * Formatted documentation removed by `make clean' and so not in source.
  * Manuals and own Standards-Version: updated to 2.1.0.0.
  * Distribute {policy,programmer}.{html.tar,ps}.gz with each upload.

 -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Sun, 1 Sep 1996 20:43:40 +0100

--- a/scripts/dpkg-source.1
+++ b/scripts/dpkg-source.1
@@ -530,6 +530,12 @@ would have done.
 .I pgp-command
 should not contain spaces or any other shell metacharacters.
 .TP
+.B -tc
+Clean the source tree (using
+.I gain-root-command
+.BR "debian/rules clean" )
+after the package has been built.
+.TP
 .BR -us ", " -uc
 Do not PGP-sign the source package or the changelog, respectively.
 .SH DPKG-DISTADDFILE ARGUMENTS
