--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+dpkg (1.3.14) unstable; urgency=low
+
+  * dpkg-buildpackage new -tc (clean source tree) option.
+
+  * Formatted documentation removed by `make clean' and so not in source.
+  * Manuals and own Standards-Version: updated to 2.1.0.0.
+  * Distribute {policy,programmer}.{html.tar,ps}.gz with each upload.
+
+ -- Ian Jackson <ian@chiark.chu.cam.ac.uk>  Sun, 1 Sep 1996 20:43:40 +0100
+
 dpkg (1.3.13) unstable; urgency=low (HIGH for building new src X programs)
 
   * X shared libraries added to shlibs.default (=> `elf-x11r6lib').
