--- a/scripts/update-rc.d.8
+++ b/scripts/update-rc.d.8
@@ -137,6 +137,15 @@ Any files in the
 directories that are not symbolic links to the script
 .BI /etc/init.d/ name
 will be left untouched.
+.SH OPTIONS
+.TP
+.I -n
+Don't do anything, just show what we would do.
+.TP
+.I -f
+Force removal of symlinks even if
+.BI /etc/init.d/ name
+still exists.
 .SH EXAMPLES
 Insert links using the defaults:
 .nf
