Update to dpkg 1.4.1.5

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,29 @@
+dpkg (1.4.1.5) unstable; urgency=low
+
+  * Non-maintainer release.
+  * (dpkg-dev): Use emacsen-common for debian-changelog-mode.el
+    (closes:Bug#20776,#31030).
+  * Removed references to the packaging and policy manuals from debian/control.
+  * Put debian-changelog-mode.el in dpkg-dev and remove from dpkg (closes:Bug#29271).
+  * Fix paths in 50dpkg-dev.el using Roderick Schertler's patch
+    (closes:Bug#28270,#29702,#26876,#29184,and others).
+  * Note that bug number 17367 was fixed in 1.4.0.26.
+  * Add Zack Weinberg's install-info patch for GNU install-info
+    compatibility (closes:Bug#28965).
+  * Add dpkg-architecture stuff from Marcus Brinkmann.
+  * Remove debian-keyring suggests from dpkg.
+  * Add -k<keyid> flag to dpkg-buildpackage.
+  * --textmode works in gpg, remove kluge from dpkg-buildpackage.
+  * Cleanup configure.in slightly (stop using tl_ macros, fix gettext stuff).
+  * Attempt to make Debian source useful for non-Debian systems
+    (i.e. distclean tree instead of maintainer-clean tree).
+  * Sync with wichert's 1.4.1.4.
+  * Add my ltconfig-1.3.2.diff (RPATH workaround).
+  * Add dpkg-scansources program and man page.
+  * Man pages in /usr/share/man.
+
+ -- Joel Klecker <espy@debian.org>  Tue, 13 Jul 1999 18:12:15 -0700
+
 dpkg (1.4.1.4) unstable; urgency=low
 
   * Also change developer-keyring to debian-keyring for dpkg-dev package
