--- a/scripts/dpkg-source.1
+++ b/scripts/dpkg-source.1
@@ -552,6 +552,11 @@ after the package has been built.
 .TP
 .BR -us ", " -uc
 Do not sign the source package or the changelog, respectively.
+.TP
+.BI -a architecture
+Specify the Debian architecture we build for. The architecture of the
+machine we build on is determined automatically, and is also the default
+for the host machine.
 .SH DPKG-DISTADDFILE ARGUMENTS
 .B dpkg-distaddfile
 does not take any non-common options.  It takes three non-option
