--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,32 @@
+dpkg (1.4.1.7) unstable; urgency=low
+
+  * Non-maintainer release.
+  * Use /usr/share/doc
+  * Merge changes from dpkg-iwj tree:
+    + change section in dpkg-deb.1 to 1
+    + Use COPYINGFILE instead of hardcoded GPL-location in showcopyright()
+    + varbufprintf (used for some error messages) vsnprintf return value
+      assumption changed to correspond to reality rather than glibc-doc.
+    + Don't read available-info when not needed (slightly improved from 
+	  dpkg-iwj: don't read for listfiles either :)
+    + Cleanup --assert-* code
+    + Assume largemem on systems without sysinfo(2).
+    + modify preexec-script for easier script execution
+    + Do not chmod(".../path/to/symlink",0600) causing many bad perms.
+    + Sanity-check numbers for parameters
+    + Move some logic from process_archive into wantinstall
+    + Print '0' in dpkg-scanpackages if no packages found.
+
+ -- Wichert Akkerman <wakkerma@debian.org>  Fri, 10 Sep 1999 04:06:32 +0200
+
+dpkg (1.4.1.6) unstable; urgency=low
+
+  * Non-maintainer release.
+  * scripts/dpkg-architecture.pl: Update to latest version.
+  * scripts/dpkg-architecture.1: Likewise.
+  
+ -- Marcus Brinkmann <brinkmd@debian.org>  Sat, 24 Jul 1999 18:24:21 +0200
+
 dpkg (1.4.1.5) unstable; urgency=low
 
   * Non-maintainer release.
